# MillerRabin-prime-number-checking-with-PThread

./: CMakeLists.txt  FileParse.cpp  FileParse.hpp  FileParseMpz.cpp  FileParseMpz.hpp  MillerRabinPar.cpp  MillerRabinPar.hpp  MillerRabinSeq.cpp  MillerRabinSeq.hpp  README.md  interval.txt  main.cpp
sample/: custom.txt  little.txt
